--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,9 +3,9 @@ extends layout/app
 block page
   include chunk/header
 
-  h1 Главная
+  h1.title Главная!!!
 
-  ul
+  ul.news
     each item in news
       li= item.name
 
