Задача для изображений

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,7 +3,9 @@ extends layout/app
 block page
   include chunk/header
 
-  h1.title Главная!!!
+  h1.title Главная
+
+  img(src="img/img-3.jpg" alt="Photo", width="500")
 
   ul.news
     each item in news
